kinda did alpha-beta pruning

--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,10 @@
             </div>
             </div>
         </div>
+
+        <button id="move-black">Make optimal black move</button>
+        <button id="move-white">Make optimal white move</button>
+
         <script src="/bundle.js"></script>
         <script src="/swipl-wasm/swipl-web.js"></script>
     </body>
