--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
         <button id="move-black">Make optimal black move</button>
         <button id="move-white">Make optimal white move</button>
 
-        <script src="/bundle.js"></script>
-        <script src="/swipl-wasm/swipl-web.js"></script>
+        <script src="/main.js"></script>
+        <!-- <script src="/swipl-wasm/swipl-web.js"></script> -->
     </body>
 </html>
