--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <link rel="manifest" href="manifest.json" />
         <link rel="stylesheet" href="styles.css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link
             href="https://fonts.googleapis.com/css?family=Material+Icons&display=block"
             rel="stylesheet"
