Added proper icons. Improved PWA-ness

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="styles.css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#ebebeb">
+        <link rel="apple-touch-icon" href="icon@1.5x.png">
+        <link rel="icon" type="image/png" href="icon@1.5x.png"></link>
         <link
             href="https://fonts.googleapis.com/css?family=Material+Icons&display=block"
             rel="stylesheet"
@@ -197,6 +200,14 @@
                         <div class="mdc-button__ripple"></div>
                         <span class="mdc-button__label">Make optimal black move</span>
                     </button>
+                </div>
+            </div>
+        </div>
+
+        <div class="mdc-snackbar">
+            <div class="mdc-snackbar__surface" role="status" aria-relevant="additions">
+                <div class="mdc-snackbar__label" aria-atomic="false">
+                    App is ready for use offline
                 </div>
             </div>
         </div>
