jus changin' text a bit

--- a/public/index.html
+++ b/public/index.html
@@ -207,7 +207,7 @@
         <div class="mdc-snackbar">
             <div class="mdc-snackbar__surface" role="status" aria-relevant="additions">
                 <div class="mdc-snackbar__label" aria-atomic="false">
-                    App is ready for use offline
+                    App is ready for offline use
                 </div>
             </div>
         </div>
