It kinda works now

--- a/public/index.html
+++ b/public/index.html
@@ -17,102 +17,90 @@
     </head>
     <body>
         <div id="mount">
-            <div class="board-container">
-                <div class="board">
-                    <!-- ((.row>(.cell.white+.cell.black)*4+).row>(.cell.black+.cell.white)*4)*4 -->
-                    <div class="row">
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                    </div>
-                    <div class="row">
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                    </div>
-                    <div class="row">
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                    </div>
-                    <div class="row">
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                    </div>
-                    <div class="row">
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                    </div>
-                    <div class="row">
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                    </div>
-                    <div class="row">
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                    </div>
-                    <div class="row">
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                        <div class="cell black"></div>
-                        <div class="cell white"></div>
-                    </div>
-                </div>
-            </div>
+            <checkers-board id="board" board='[
+                ["0", "1", "0", "1", "0", "1", "0", "1"],
+                ["1", "0", "1", "0", "1", "0", "1", "0"],
+                ["0", "1", "0", "1", "0", "1", "0", "1"],
+                ["1", "0", "1", "0", "1", "0", "1", "0"],
+                ["0", "1", "0", "1", "0", "1", "0", "1"],
+                ["1", "0", "1", "0", "1", "0", "1", "0"],
+                ["0", "1", "0", "1", "0", "1", "0", "1"],
+                ["1", "0", "1", "0", "1", "0", "1", "0"]
+            ]'></checkers-board>
+            <script>
+                board.addEventListener("checkers-select", console.log)
+                board.addEventListener("checkers-move", console.log)
+            </script>
         </div>
-
-        <!-- <mvc-button id="move-black">Make optimal black move</mvc-button>
-        <mvc-button id="move-white">Make optimal white move</mvc-button> -->
-
-        <!-- <mvc-button id="move-black" label="Make optimal black move"></mvc-button>
-        <mvc-button id="move-white" label="Make optimal white move"></mvc-button> -->
 
         <div class="lower">
             <div class="algorithm-settings">
-                <div class="mdc-select mdc-select--filled algo-select">
+                <div class="mdc-select mdc-select--filled mdc-select--disabled backend-select">
+                    <div
+                        class="mdc-select__anchor"
+                        role="button"
+                        aria-haspopup="listbox"
+                        aria-expanded="false"
+                        aria-labelledby="demo-label demo-selected-text"
+                    >
+                        <span class="mdc-select__ripple"></span>
+                        <span id="demo-label" class="mdc-floating-label">Backend</span>
+                        <span class="mdc-select__selected-text-container">
+                            <span id="demo-selected-text" class="mdc-select__selected-text"
+                                >JS</span
+                            >
+                        </span>
+                        <span class="mdc-select__dropdown-icon">
+                            <svg
+                                class="mdc-select__dropdown-icon-graphic"
+                                viewBox="7 10 10 5"
+                                focusable="false"
+                            >
+                                <polygon
+                                    class="mdc-select__dropdown-icon-inactive"
+                                    stroke="none"
+                                    fill-rule="evenodd"
+                                    points="7 10 12 15 17 10"
+                                ></polygon>
+                                <polygon
+                                    class="mdc-select__dropdown-icon-active"
+                                    stroke="none"
+                                    fill-rule="evenodd"
+                                    points="7 15 12 10 17 15"
+                                ></polygon>
+                            </svg>
+                        </span>
+                        <span class="mdc-line-ripple"></span>
+                    </div>
+
+                    <div
+                        class="mdc-select__menu mdc-menu mdc-menu-surface mdc-menu-surface--fullwidth"
+                    >
+                        <ul class="mdc-list" role="listbox" aria-label="Food picker listbox">
+                            <li
+                                class="mdc-list-item mdc-list-item--selected"
+                                aria-selected="true"
+                                data-value="js"
+                                role="option"
+                            >
+                                <span class="mdc-list-item__ripple"></span>
+                                <span class="mdc-list-item__text">JS</span>
+                            </li>
+                            <li
+                                class="mdc-list-item"
+                                aria-selected="false"
+                                data-value="swipl"
+                                role="option"
+                            >
+                                <span class="mdc-list-item__ripple"></span>
+                                <span class="mdc-list-item__text">SWI-Prolog</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+
+                <div class="mdc-select mdc-select--filled mdc-select--disabled algo-select">
                     <div
                         class="mdc-select__anchor"
                         role="button"
@@ -176,7 +164,7 @@
                     </div>
                 </div>
 
-                <label class="mdc-text-field mdc-text-field--filled">
+                <label class="mdc-text-field mdc-text-field--filled mdc-text-field--disabled">
                     <span class="mdc-text-field__ripple"></span>
                     <span class="mdc-floating-label" id="my-label-id">Search Depth</span>
                     <input
@@ -192,11 +180,11 @@
 
             <div id="mount-controls">
                 <div class="controls">
-                    <button id="move-white" class="foo-button mdc-button mdc-button--raised">
+                    <button id="move-white" class="foo-button mdc-button mdc-button--raised" disabled>
                         <div class="mdc-button__ripple"></div>
                         <span class="mdc-button__label">Make optimal white move</span>
                     </button>
-                    <button id="move-black" class="foo-button mdc-button mdc-button--raised">
+                    <button id="move-black" class="foo-button mdc-button mdc-button--raised" disabled>
                         <div class="mdc-button__ripple"></div>
                         <span class="mdc-button__label">Make optimal black move</span>
                     </button>
