Engine change is now a thing

--- a/public/index.html
+++ b/public/index.html
@@ -18,17 +18,6 @@
         </style>
     </head>
     <body>
-        <checkers-board id="board" board='[
-            ["0", "1", "0", "1", "0", "1", "0", "1"],
-            ["1", "0", "1", "0", "1", "0", "1", "0"],
-            ["0", "1", "0", "1", "0", "1", "0", "1"],
-            ["1", "0", "1", "0", "1", "0", "1", "0"],
-            ["0", "1", "0", "1", "0", "1", "0", "1"],
-            ["1", "0", "1", "0", "1", "0", "1", "0"],
-            ["0", "1", "0", "1", "0", "1", "0", "1"],
-            ["1", "0", "1", "0", "1", "0", "1", "0"]
-        ]'></checkers-board>
-        <checkers-settings></checkers-settings>
-        <mwc-snackbar id="installation-snackbar" labelText="App is ready for offline use"></mwc-snackbar>
+        <checkers-app></checkers-app>
     </body>
 </html>
