Updated benchmark to be more refined

--- a/public/benchmark.html
+++ b/public/benchmark.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkers benchmark</title>
+    <style>
+        table {
+            margin: 12px;
+            border-collapse: collapse;
+        }
+        td,th {
+            border: solid 1px black;
+            padding: 6px;
+        }
+        th {
+            background-color: lightgray;
+        }
+    </style>
 </head>
 <body>
     <script src="benchmark.js"></script>
