--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <meta name="theme-color" content="#ebebeb">
         <link rel="apple-touch-icon" href="icon@1.5x.png">
         <link rel="icon" type="image/png" href="icon@1.5x.png"></link>
-        <title>Prolog Web Checkers</title>
+        <title>WebAssembly Checkers</title>
         <style>
             :root {
                 --mdc-theme-primary: #2592c5
