--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <script async src="/main.js"></script>
+        <script async src="main.js"></script>
         <link rel="manifest" href="manifest.json" />
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
